--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="main_container">
+      <h1>Odin Recipes</h1>
+      <ul class="recipe_container">
+        <li class="recipe"></li>
+        <li class="recipe"></li>
+        <li class="recipe"></li>
+      </ul>
+    </main>
+  </body>
 </html>
