Add links to other HTML files

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <main class="main_container">
       <h1>Odin Recipes</h1>
       <ul class="recipe_container">
-        <li class="recipe"></li>
-        <li class="recipe"></li>
-        <li class="recipe"></li>
+        <li class="recipe"><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li class="recipe">
+          <a href="./recipes/enchiladas.html">Enchiladas</a>
+        </li>
+        <li class="recipe">
+          <a href="./recipes/beef_manhattan.html">Beef Manhattan</a>
+        </li>
       </ul>
     </main>
   </body>
