--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/lasagna.css" />
   </head>
   <body>
+    <h1>Lasagna</h1>
     <img
       src="../img/lasagna.jpg"
       alt="Lasagna"
@@ -14,9 +15,9 @@
       height="150"
       class="lasagna"
     />
-    <h1>Lasagna</h1>
     <main>
       <div class="ingredients">
+        <h2>Ingredients</h2>
         <ul>
           <li>
             Ground beef - We used 80/20 beef (20% fat content) for a juicier
@@ -49,40 +50,43 @@
         </ul>
       </div>
       <div class="directions">
-        <li>
-          Brown the beef - Add oil to a deep pan and sautee onion and beef until
-          browned, 5 minutes then add garlic and stir another minute.
-        </li>
-        <li>
-          Finish the sauce - Pour in 1/4 cup of wine and stir until almost
-          evaporated. Add marinara, salt, pepper, thyme, sugar, and parsley;
-          bring to a simmer, then cover and cook 5 minutes.
-        </li>
-        <li>
-          Make the cheese filling - Combine all of the cheese sauce ingredients
-          and 1 cup of mozzarella in a mixing bowl (reserve the rest for
-          later)./li>
-        </li>
-        <li>
-          Prep - Preheat your oven to 375ºF and cook the lasagna noodles in a
-          pot of well-salted water until al dente./li>
-        </li>
-        <li>
-          Assemble - Spread 1/2 cup of the meat sauce on the bottom of a
-          9x13-inch casserole dish. Add 3 noodles, followed by 1/3 of the meat
-          sauce, 1 cup of mozzarella, and half of the ricotta mixture. Repeat,
-          then for the top layer, add 3 noodles, 1/3 of the meat sauce, and the
-          remaining mozzarella.
-        </li>
-        <li>
-          Bake - Cover with foil and bake at 375˚F for 45 minutes, then remove
-          the foil and broil for 3 to 5 minutes, or until the cheese is lightly
-          browned.
-        </li>
-        <li>
-          Rest - Let the lasagna rest for about 30 minutes before cutting and
-          serving.
-        </li>
+        <h2>Directions</h2>
+        <ol>
+          <li>
+            Brown the beef - Add oil to a deep pan and sautee onion and beef
+            until browned, 5 minutes then add garlic and stir another minute.
+          </li>
+          <li>
+            Finish the sauce - Pour in 1/4 cup of wine and stir until almost
+            evaporated. Add marinara, salt, pepper, thyme, sugar, and parsley;
+            bring to a simmer, then cover and cook 5 minutes.
+          </li>
+          <li>
+            Make the cheese filling - Combine all of the cheese sauce
+            ingredients and 1 cup of mozzarella in a mixing bowl (reserve the
+            rest for later)./li>
+          </li>
+          <li>
+            Prep - Preheat your oven to 375ºF and cook the lasagna noodles in a
+            pot of well-salted water until al dente./li>
+          </li>
+          <li>
+            Assemble - Spread 1/2 cup of the meat sauce on the bottom of a
+            9x13-inch casserole dish. Add 3 noodles, followed by 1/3 of the meat
+            sauce, 1 cup of mozzarella, and half of the ricotta mixture. Repeat,
+            then for the top layer, add 3 noodles, 1/3 of the meat sauce, and
+            the remaining mozzarella.
+          </li>
+          <li>
+            Bake - Cover with foil and bake at 375˚F for 45 minutes, then remove
+            the foil and broil for 3 to 5 minutes, or until the cheese is
+            lightly browned.
+          </li>
+          <li>
+            Rest - Let the lasagna rest for about 30 minutes before cutting and
+            serving.
+          </li>
+        </ol>
       </div>
     </main>
   </body>
