--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,84 +7,72 @@
     <link rel="stylesheet" href="../styles/enchiladas.css" />
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1>Enchiladas</h1>
     <img
-      src="../img/lasagna.jpg"
-      alt="Lasagna"
+      src="../img/enchiladas.jpg"
+      alt="Enchiladas"
       width="150"
       height="150"
-      class="lasagna"
+      class="enchiladas"
     />
     <main>
       <div class="ingredients">
         <h2>Ingredients</h2>
         <ul>
+          <li>2 tablespoons avocado oil (or olive oil)</li>
+          <li>1 small white onion, peeled and diced</li>
           <li>
-            Ground beef - We used 80/20 beef (20% fat content) for a juicier
-            lasagna.
+            1 1/2 pounds boneless skinless chicken breasts, diced into small
+            1/2-inch pieces
           </li>
-          <li>Onion - we use yellow onion, or sweet onion works well</li>
-          <li>Garlic cloves - you can add more if you love garlic</li>
+          <li>1 (4-ounce) can diced green chiles</li>
+          <li>sea salt and freshly-cracked black pepper</li>
+          <li>1 (15-ounce) can black beans, rinsed and drained</li>
+          <li>8 large flour tortillas</li>
+          <li>3 cups Mexican-blend shredded cheese</li>
+          <li>1 batch red enchilada sauce</li>
           <li>
-            Red wine (or beef broth) - This amps up the flavor of your sauce
-            (avoid using cooking wine).
+            optional toppings: fresh cilantro, chopped red onions, diced
+            avocado, sour cream, and/or crumbled cotija cheese
           </li>
-          <li>Marinara sauce - Use homemade marinara or store-bought.</li>
-          <li>
-            Dried thyme - Italian seasoning, basil, or oregano can be
-            substituted
-          </li>
-          <li>Sugar - balances the acidity of the tomatoes</li>
-          <li>Parsley - flat-leaf or curly parsley works well</li>
-          <li>
-            Lasagna noodles - Cook these al dente; they'll continue to soften as
-            the lasagna bakes.
-          </li>
-          <li>Cottage cheese - adds great texture and moisture</li>
-          <li>Ricotta cheese - we use low-fat or part-skim ricotta</li>
-          <li>
-            Mozzarella cheese - An Italian cheese blend works, but mozzarella is
-            definitely the classic choice
-          </li>
-          <li>Egg - helps hold the cheese layer together</li>
         </ul>
       </div>
       <div class="directions">
         <h2>Directions</h2>
         <ol>
           <li>
-            Brown the beef - Add oil to a deep pan and sautee onion and beef
-            until browned, 5 minutes then add garlic and stir another minute.
+            <strong>Prep oven and enchilada sauce.</strong> Preheat oven to
+            350°F. Prepare your enchilada sauce.
           </li>
           <li>
-            Finish the sauce - Pour in 1/4 cup of wine and stir until almost
-            evaporated. Add marinara, salt, pepper, thyme, sugar, and parsley;
-            bring to a simmer, then cover and cook 5 minutes.
+            <strong>Sauté the filling mixture.</strong> In large sauté pan, heat
+            oil over medium-high heat. Add onion and sauté for 3 minutes,
+            stirring occasionally. Add diced chicken and green chiles, and
+            season with a generous pinch of salt and pepper. Sauté the mixture
+            for 6-8 minutes, stirring occasionally, or until the chicken is
+            cooked through. Add in the beans and stir until evenly combined.
+            Remove pan from heat and set aside.
           </li>
           <li>
-            Make the cheese filling - Combine all of the cheese sauce
-            ingredients and 1 cup of mozzarella in a mixing bowl (reserve the
-            rest for later)./li>
+            <strong>Assemble the enchiladas.</strong> To assemble the
+            enchiladas, set up an assembly line including: tortillas, enchilada
+            sauce, chicken mixture, and cheese. Lay out a tortilla, and spread
+            two tablespoons of sauce over the surface of the tortilla. Add a
+            generous spoonful of the chicken mixture in a line down the center
+            of the tortilla, then sprinkle with 1/3 cup cheese. Roll up tortilla
+            and place in a greased 9 x 13-inch baking dish. Assemble the
+            remaining enchiladas. Then spread any remaining sauce evenly over
+            the top of the enchiladas, followed by any extra cheese.
           </li>
           <li>
-            Prep - Preheat your oven to 375ºF and cook the lasagna noodles in a
-            pot of well-salted water until al dente./li>
+            <strong>Bake.</strong> Bake uncovered for 20 minutes, until the
+            enchiladas are cooked through and the tortillas are slightly crispy
+            on the outside. Transfer the baking dish to a wire baking rack.
           </li>
           <li>
-            Assemble - Spread 1/2 cup of the meat sauce on the bottom of a
-            9x13-inch casserole dish. Add 3 noodles, followed by 1/3 of the meat
-            sauce, 1 cup of mozzarella, and half of the ricotta mixture. Repeat,
-            then for the top layer, add 3 noodles, 1/3 of the meat sauce, and
-            the remaining mozzarella.
-          </li>
-          <li>
-            Bake - Cover with foil and bake at 375˚F for 45 minutes, then remove
-            the foil and broil for 3 to 5 minutes, or until the cheese is
-            lightly browned.
-          </li>
-          <li>
-            Rest - Let the lasagna rest for about 30 minutes before cutting and
-            serving.
+            <strong>Serve.</strong> Serve the enchiladas immediately while
+            they’re nice and hot and melty, garnished with lots of fresh
+            toppings. Enjoy!
           </li>
         </ol>
       </div>
